# java

./: .gitignore  README.md  flake.nix  result  sources.json
updater/: Cargo.toml
updater/src/: adoptium.rs  main.rs  semeru.rs
